<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/update_existing"
                android:textAlignment="center"
                android:textColor="@color/purple_550"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/updateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:fontFamily="@font/gilroy_light"
                android:gravity="start|center_vertical"
                android:hint="@string/name"
                android:padding="16dp"
                android:textColor="@color/main_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/updateIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:fontFamily="@font/gilroy_light"
                android:gravity="start|center_vertical"
                android:hint="@string/ingredients"
                android:padding="16dp"
                android:textColor="@color/main_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/updateDirections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:fontFamily="@font/gilroy_light"
                android:gravity="start|center_vertical"
                android:hint="@string/directions"
                android:padding="16dp"
                android:textColor="@color/main_color"
                android:textStyle="bold" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/save"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>